# metaheuristic-designer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  ARCH_SUMMARY.md  Algorithm.py  BaseAlgorithm.py  BaseDecoder.py  BaseSearch.py  CLAUDE.md  ERRORES.md  GeneralSearch.py  Individual.py  LICENSE  MemeticSearch.py  ObjectiveFunc.py  Operator.py  ParamScheduler.py  ParentSelection.py  README.md  Search.py  Selection.py  SurvivorSelection.py  __init__.py  coverage.json  main.py  noxfile.py  operatorFunctions.py  profile.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: python-package.yml
Algorithms/: BaseAlgorithm.py  CMA_ES.py  DE.py  ES.py  GA.py  HillClimb.py  LocalSearch.py  SA.py  StaticPopulation.py  __init__.py  algorithm_alias.py
Decoders/: CMADecoder.py  DefaultDecoder.py  ImageDecoder.py  MatrixDecoder.py  __init__.py
Metaheuristics/: Metaheuristic.py  __init__.py
Metaheuristics/CRO_SL/: CROSL_DE.xlsx  CRO_SL.py  CoralPopulation.py  README.md  __init__.py
Metaheuristics/DE/: DE.py  DEPopulation.py  __init__.py
Metaheuristics/ES/: ES.py  ESPopulation.py  __init__.py
Metaheuristics/Genetic/: Genetic.py  GeneticPopulation.py  __init__.py
Metaheuristics/HS/: HS.py  HSPopulation.py  README.md  __init__.py
Metaheuristics/HillClimb/: HillClimb.py  HillClimbEvolve.py  __init__.py
Metaheuristics/InHS/: InHS.py  InHSPopulation.py  README.md  __init__.py
Metaheuristics/LSHADE/: LSHADE.py  __init__.py
Metaheuristics/PSO/: PSO.py  PSOPopulation.py  __init__.py
Metaheuristics/RLEvolution/: EvolQLearning.py  EvolSarsa.py  RLEvolution.py  __init__.py
Metaheuristics/SimAnn/: SimAnn.py  SimAnnEvolve.py  __init__.py
Operators/: Operator.py  OperatorBinary.py  OperatorInt.py  OperatorList.py  OperatorMeta.py  OperatorReal.py  OperatorSplit.py  __init__.py  list_operator_functions.py  operatorFunctions.py  vector_operator_functions.py
SearchMethods/: GeneralSearch.py  MemeticSearch.py  __init__.py
benchmarks/: __init__.py  benchmarkFuncs.py  benchmark_funcs.py  evaluate.py  imgGen.py  requirements.txt
benchmarks/imgProblem/: ImgFuncs.py  __init__.py
data/sat_examples/: README.md
data/tsp_examples/: generate_mat.ipynb  r100_01.csv  r100_03.csv  r100_06.csv  r100_07.csv  r100_08.csv  r100_09.csv  r100_10.csv  r20_01.csv  r20_02.csv  r20_03.csv  r20_04.csv  r20_05.csv  (+22 more)
docs/: api_reference.algorithm_config.rst  api_reference.custom_components.rst  api_reference.methods.rst  api_reference.plotting.rst  api_reference.quick_start.rst  api_reference.rst  api_reference.simple.rst  conf.py  design_philosophy.rst  html  implementations.rst  index.rst  metaheuristic-designer.benchmarks.rst  metaheuristic-designer.rst  metaheuristic-designer.simple.rst  metaheuristic_designer.Algorithms.CRO.rst  metaheuristic_designer.Algorithms.Classic.rst  metaheuristic_designer.Algorithms.Modern.rst  metaheuristic_designer.Algorithms.rst  metaheuristic_designer.Encodings.rst  metaheuristic_designer.Initializers.rst  metaheuristic_designer.Operators.rst  metaheuristic_designer.SearchMethods.rst  metaheuristic_designer.SelectionMethods.rst  metaheuristic_designer.algorithms.CRO.rst  metaheuristic_designer.algorithms.Classic.rst  metaheuristic_designer.algorithms.VNS.rst  metaheuristic_designer.algorithms.rst  metaheuristic_designer.benchmarks.rst  metaheuristic_designer.constraintHandlers.rst  metaheuristic_designer.constraint_handlers.rst  metaheuristic_designer.encodings.rst  metaheuristic_designer.initializers.rst  metaheuristic_designer.operators.rst  metaheuristic_designer.rst  metaheuristic_designer.searchMethods.rst  metaheuristic_designer.selectionMethods.rst  metaheuristic_designer.selection_methods.rst  metaheuristic_designer.simple.rst  metaheuristic_designer.strategies.BayesianOptimization.rst  (+26 more)
examples/: README.md  adaption_example.py  adaption_test.py  algorithm_seleciton.py  algorithm_selection.py  benchmark.py  benchmark_simple.py  create_algorithm.ipynb  create_encoding.ipynb  create_operators.ipynb  exec_basic.py  exec_basic_perf.py  exec_basic_simple.py  exec_mutiobj.py  image_deblur.py  image_evolution.py  image_evolution_simple.py  knapsack_example.py  lambda_test.py  make_new_algorithm.ipynb  make_new_operators.ipynb  np_problem_example.py  np_problem_example_simple.py  np_problem_simple.py  np_problems.py  np_problems_simple.py  obj_from_lambda.py  pso_example.py  pso_test.py  strategy_seleciton.py  strategy_selection.py  vonmises_mutation.py
metaheuristic-designer/: .gitignore
operators/: OperatorInt.py  OperatorReal.py  __init__.py
tests/: conftest.py  test_additional_coverage.py  test_algs.py  test_base_classes.py  test_benchmarks.py  test_bin_ops.py  test_checkpointing.py  test_composite_ops.py  test_constraints.py  test_crossover_functions.py  test_de_functions.py  test_decoders.py  test_encodings.py  test_from_lambda.py  test_history_tracker.py  test_initializers.py  test_int_ops.py  test_integration.py  test_meta_ops.py  test_multiobj_func.py  test_mutation_functions.py  test_paramsch.py  test_parent_sel.py  test_parent_sel_functions.py  test_perm_ops.py  test_permutation_functions.py  test_population.py  test_real_ops.py  test_real_vector.py  test_simple.py  test_state_saving.py  test_stopping_condition.py  test_surv_sel.py  test_surv_sel_multi.py  test_survivor_sel_functions.py  test_test.py  test_utils.py  test_vector_ops.py
tutorials/: README.md  algorithm_selection.ipynb  algorithm_selection_tutorial.ipynb  complete_tutorial.ipynb  create_algorithm.ipynb  create_encoding.ipynb  create_operators.ipynb  create_strategy.ipynb  custom_components_tutorial.ipynb  genetic_algorithm_tutorial.ipynb  parameter_schedules_tutorial.ipynb  plotting.ipynb  plotting_tutorial.ipynb  real_time_plotting_de.ipynb  real_time_plotting_tutorial.ipynb  self_adaption_tutorial.ipynb  simple_api_tutorial.ipynb  simple_ga_tutorial.ipynb  tsp_tutorial.ipynb
verification/: README.md  deap_helpers.py  run_deap.py
(+905 files in other folders)
