[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "metaheuristic-designer"
version = "0.4.0"
authors = [
    {name = "eugenioLR", email = "eugeniolorente0@gmail.com"}
]
description = "A python package to design metaheuristic optimization algorithms from components."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["optization", "genetic-algorithm", "evolutionary-algorithms", "metaheuristics"]
license = {text = "LICENSE"}
dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "pyparsing>=3.0",
    "scikit-image>=0.21",
    "pandas>=2.1.2",
    "enlighten>=1.12.2",
    "scikit-learn",
    "cloudpickle",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/eugenioLR/metaheuristic-designer"

[project.optional-dependencies]
examples = [
    "pygame>=2.5.0",    
    "networkx>=3.1",
    "opencv-python>=4.8",
    "matplotlib>=3.5",
    "seaborn",
    "jupyter",
    "ipywidgets",
    "plotly",
    "anywidget"
]

docs = [
    "sphinx_material>=0.0.36",
    "sphinx>=7.1.1",
]

dev = [
    "nox",
    "pytest>=7.4.0",
    "pytest-cov",
    "coverage>=7.3.1",
    "black[jupyter]>=23.10.1",
    "metaheuristic_designer[docs,examples]"
]

[tool.black]
line-length = 150
target-version = ['py310']

[tool.coverage.run]
source = ["metaheuristic_designer"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
show_missing = true
fail_under = 80