[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "metaheuristic-designer"
version = "1.0.0"
authors = [
    {name = "eugenioLR", email = "eugeniolorente0@gmail.com"}
]
description = "A python package to design metaheuristic optimization algorithms from components."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["optimization", "genetic-algorithm", "evolutionary-algorithms", "metaheuristics"]
license = {text = "LICENSE"}
dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "pyparsing>=3.0",
    "pandas>=2.1.2",
    "scikit-learn",
    "cloudpickle",
    "tqdm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/eugenioLR/metaheuristic-designer"

[project.optional-dependencies]
examples = [
    "pygame>=2.5.0",    
    "scikit-image>=0.21",
    "networkx>=3.1",
    "opencv-python>=4.8",
    "matplotlib>=3.5",
    "seaborn",
    "jupyter",
    "ipywidgets",
    "plotly",
    "anywidget"
]

docs = [
    "sphinx_material>=0.0.36",
    "sphinx>=7.1.1",
]

test = [
    "nox",
    "pytest>=7.4.0",
    "pytest-cov",
    "coverage>=7.3.1",
    "black[jupyter]>=23.10.1",
]

dev = [
    "pre-commit",
    "nbstripout",
    "metaheuristic-designer[examples,docs,test]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 150
target-version = ['py310']

[tool.coverage.run]
source = ["metaheuristic_designer"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
]